# karaokify

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml
src/karaokify/: __init__.py  __main__.py  cli.py  manifest.py  mux.py  pipeline.py  schema.json  separate.py
tests/: conftest.py  test_cli.py  test_pipeline.py
tests/fixtures/: make_fixture.py
